--- a/Lecture_0_Introduction.ipynb
+++ b/Lecture_0_Introduction.ipynb
@@ -71,9 +71,9 @@
       "<tr><td>04</td><td>02/05</td><td>\n",
       "[Sistemas de recomendaci\u00f3n](Lecture_4_Recommendation_Systems.ipynb)</td></tr>\n",
       "<tr><td>05</td><td>02/12</td><td>\n",
-      "Presentaciones: Planteamiento del problema</td></tr>\n",
+      "<b>Presentaciones: Planteamiento del problema</b></td></tr>\n",
       "<tr><td>05</td><td>02/12</td><td>\n",
-      "Presentaciones: Planteamiento del problema</td></tr>\n",
+      "<b>Presentaciones: Planteamiento del problema</b></td></tr>\n",
       "<tr><td>06</td><td>02/19</td><td>\n",
       "Redes aleatorias 1: Erd\u00f6s-Renyi</td></tr>\n",
       "<tr><td>06</td><td>02/19</td><td>\n",
@@ -90,21 +90,21 @@
       "<tr><td>09</td><td>03/12</td><td>\n",
       "[Procesamiento de flujos: conteo](Lecture_6_Stream_Algorithms_Counting.ipynb)</td></tr>\n",
       "<tr><td>10</td><td>03/19</td><td>\n",
-      "Presentaciones: Avances</td></tr>\n",
-      "<tr><td>10</td><td>03/19</td><td>\n",
-      "Presentaciones: Avances</td></tr>\n",
-      "<tr><td>11</td><td>03/26</td><td>\n",
       "Din\u00e1mica en redes 3: Consenso y sincronizaci\u00f3n</td></tr>\n",
+      "<tr><td>10</td><td>03/19</td><td>\n",
+      "Miner\u00eda de textos</td></tr>\n",
       "<tr><td>11</td><td>03/26</td><td>\n",
-      "Modelos de lenguaje: introducci\u00f3n</td></tr>\n",
-      "<tr><td>12</td><td>04/02</td><td>\n",
       "Comunidades 1: Clustering y Modularidad</td></tr>\n",
+      "<tr><td>11</td><td>03/26</td><td>\n",
+      "\u00cdndices invertidos</td></tr>\n",
       "<tr><td>12</td><td>04/02</td><td>\n",
-      "Modelos de lenguaje: modelos de bloom</td></tr>\n",
+      "<b>Presentaciones: Avances</b></td></tr>\n",
+      "<tr><td>12</td><td>04/02</td><td>\n",
+      "<b>Presentaciones: Avances</b></td></tr>\n",
       "<tr><td>13</td><td>04/09</td><td>\n",
       "Comunidades 2: Stability</td></tr>\n",
       "<tr><td>13</td><td>04/09</td><td>\n",
-      "Modelos ocultos de Markov</td></tr>\n",
+      "Modelos de lenguaje: introducci\u00f3n</td></tr>\n",
       "<tr><td>      </td><td>04/16</td><td>\n",
       "DESCANSO</td></tr>\n",
       "<tr><td>      </td><td>04/16</td><td>\n",
@@ -116,7 +116,7 @@
       "<tr><td>15</td><td>05/30</td><td>\n",
       "Redes con signos y balance estructural</td></tr>\n",
       "<tr><td>15</td><td>05/30</td><td>\n",
-      "Miner\u00eda de textos</td></tr>\n",
+      "</td></tr>\n",
       "<tr><td>16</td><td>05/07</td><td>\n",
       "Privacidad y privacidad en redes</td></tr>\n",
       "<tr><td>16</td><td>05/07</td><td>\n",
@@ -124,11 +124,11 @@
       "<tr><td>17</td><td>05/14</td><td>\n",
       "Inferencia de redes</td></tr>\n",
       "<tr><td>17</td><td>5/14</td><td>\n",
-      "\u00cdndices invertidos</td></tr>\n",
+      "</td></tr>\n",
       "<tr><td>19</td><td>05/21</td><td>\n",
-      "Presentaci\u00f3n final</td></tr>\n",
+      "<b>Presentaci\u00f3n final<b></td></tr>\n",
       "<tr><td>19</td><td>05/21</td><td>\n",
-      "Presentaci\u00f3n final</td></tr> \n",
+      "<b>Presentaci\u00f3n final</b></td></tr> \n",
       "</table>\n"
      ]
     },
