Added counting different values

--- a/Lecture_0_Introduction.ipynb
+++ b/Lecture_0_Introduction.ipynb
@@ -116,7 +116,7 @@
       "<tr><td>15</td><td>05/30</td><td>\n",
       "Redes con signos y balance estructural</td></tr>\n",
       "<tr><td>15</td><td>05/30</td><td>\n",
-      "</td></tr>\n",
+      "???</td></tr>\n",
       "<tr><td>16</td><td>05/07</td><td>\n",
       "Privacidad y privacidad en redes</td></tr>\n",
       "<tr><td>16</td><td>05/07</td><td>\n",
@@ -124,9 +124,9 @@
       "<tr><td>17</td><td>05/14</td><td>\n",
       "Inferencia de redes</td></tr>\n",
       "<tr><td>17</td><td>5/14</td><td>\n",
-      "</td></tr>\n",
+      "???</td></tr>\n",
       "<tr><td>19</td><td>05/21</td><td>\n",
-      "<b>Presentaci\u00f3n final<b></td></tr>\n",
+      "<b>Presentaci\u00f3n final</b></td></tr>\n",
       "<tr><td>19</td><td>05/21</td><td>\n",
       "<b>Presentaci\u00f3n final</b></td></tr> \n",
       "</table>\n"
