Added counting different values

--- a/Lecture_0_Introduction.ipynb
+++ b/Lecture_0_Introduction.ipynb
@@ -113,18 +113,18 @@
       "Comunidades 3: Map y comunidades con traslape</td></tr>\n",
       "<tr><td>14</td><td>04/23</td><td>\n",
       "Modelos ocultos de Markov</td></tr>\n",
-      "<tr><td>15</td><td>05/30</td><td>\n",
+      "<tr><td>15</td><td>04/30</td><td>\n",
       "Redes con signos y balance estructural</td></tr>\n",
-      "<tr><td>15</td><td>05/30</td><td>\n",
-      "???</td></tr>\n",
+      "<tr><td>15</td><td>04/30</td><td>\n",
+      "Programaci\u00f3n funcional</td></tr>\n",
       "<tr><td>16</td><td>05/07</td><td>\n",
-      "Privacidad y privacidad en redes</td></tr>\n",
+      "Estructuras algebr\u00e1icas para procesamiento de informaci\u00f3n</td></tr>\n",
       "<tr><td>16</td><td>05/07</td><td>\n",
       "Privacidad en bases de datos</td></tr>\n",
       "<tr><td>17</td><td>05/14</td><td>\n",
       "Inferencia de redes</td></tr>\n",
-      "<tr><td>17</td><td>5/14</td><td>\n",
-      "???</td></tr>\n",
+      "<tr><td>17</td><td>05/14</td><td>\n",
+      "Privacidad y privacidad en redes</td></tr>\n",
       "<tr><td>19</td><td>05/21</td><td>\n",
       "<b>Presentaci\u00f3n final</b></td></tr>\n",
       "<tr><td>19</td><td>05/21</td><td>\n",
