Added counting different values

--- a/Lecture_0_Introduction.ipynb
+++ b/Lecture_0_Introduction.ipynb
@@ -39,7 +39,7 @@
       "La calificaci\u00f3n final ser\u00e1 compuesta de la siguiente manera:\n",
       "\n",
       "* 10% Participaci\u00f3n en clase\n",
-      "* 30% Tareas\n",
+      "* 30% Tareas (4 tareas, se descarta la de menor calificaci\u00f3n 10% cada una)\n",
       "* 10% Presentaci\u00f3n del problema del proyecto final.\n",
       "* 10% Presentaci\u00f3n de avances en el proyecto final.\n",
       "* 10% Presentaci\u00f3n de resultados.\n",
@@ -92,11 +92,11 @@
       "<tr><td>10</td><td>03/19</td><td>\n",
       "Din\u00e1mica en redes 3: Consenso y sincronizaci\u00f3n</td></tr>\n",
       "<tr><td>10</td><td>03/19</td><td>\n",
-      "Miner\u00eda de textos</td></tr>\n",
+      "Programaci\u00f3n funcional</td></tr>\n",
       "<tr><td>11</td><td>03/26</td><td>\n",
       "Comunidades 1: Clustering y Modularidad</td></tr>\n",
       "<tr><td>11</td><td>03/26</td><td>\n",
-      "\u00cdndices invertidos</td></tr>\n",
+      "Estructuras algebr\u00e1icas para procesamiento de informaci\u00f3n</td></tr>\n",
       "<tr><td>12</td><td>04/02</td><td>\n",
       "<b>Presentaciones: Avances</b></td></tr>\n",
       "<tr><td>12</td><td>04/02</td><td>\n",
@@ -104,7 +104,7 @@
       "<tr><td>13</td><td>04/09</td><td>\n",
       "Comunidades 2: Stability</td></tr>\n",
       "<tr><td>13</td><td>04/09</td><td>\n",
-      "Modelos de lenguaje: introducci\u00f3n</td></tr>\n",
+      "Miner\u00eda de textos</td></tr>\n",
       "<tr><td>      </td><td>04/16</td><td>\n",
       "DESCANSO</td></tr>\n",
       "<tr><td>      </td><td>04/16</td><td>\n",
@@ -112,19 +112,19 @@
       "<tr><td>14</td><td>04/23</td><td>\n",
       "Comunidades 3: Map y comunidades con traslape</td></tr>\n",
       "<tr><td>14</td><td>04/23</td><td>\n",
-      "Modelos ocultos de Markov</td></tr>\n",
+      "\u00cdndices invertidos</td></tr>\n",
       "<tr><td>15</td><td>04/30</td><td>\n",
       "Redes con signos y balance estructural</td></tr>\n",
       "<tr><td>15</td><td>04/30</td><td>\n",
-      "Programaci\u00f3n funcional</td></tr>\n",
+      "Modelos de lenguaje: introducci\u00f3n</td></tr>\n",
       "<tr><td>16</td><td>05/07</td><td>\n",
-      "Estructuras algebr\u00e1icas para procesamiento de informaci\u00f3n</td></tr>\n",
-      "<tr><td>16</td><td>05/07</td><td>\n",
-      "Privacidad en bases de datos</td></tr>\n",
-      "<tr><td>17</td><td>05/14</td><td>\n",
       "Inferencia de redes</td></tr>\n",
+      "<tr><td>16</td><td>05/07</td><td>\n",
+      "Modelos ocultos de Markov</td></tr>\n",
       "<tr><td>17</td><td>05/14</td><td>\n",
       "Privacidad y privacidad en redes</td></tr>\n",
+      "<tr><td>17</td><td>05/14</td><td>\n",
+      "Privacidad en bases de datos</td></tr>\n",
       "<tr><td>19</td><td>05/21</td><td>\n",
       "<b>Presentaci\u00f3n final</b></td></tr>\n",
       "<tr><td>19</td><td>05/21</td><td>\n",
