--- a/Lecture_6_Stream_Algorithms_Counting.ipynb
+++ b/Lecture_6_Stream_Algorithms_Counting.ipynb
@@ -55,9 +55,7 @@
       "\n",
       "Para m\u00e1s referencias acerca de los momentos de frecuencia ver:\n",
       "\n",
-      "The space complexity of approximating the frequency moments\n",
-      "\n",
-      "http://www.tau.ac.il/~nogaa/PDFS/amsz4.pdf"
+      "The space complexity of approximating the frequency moments http://www.tau.ac.il/~nogaa/PDFS/amsz4.pdf"
      ]
     },
     {
@@ -86,9 +84,9 @@
       "* La probabilidad de que ninguno de los $m$ elementos tenga una cola de longitud al menos $r$ es $(1 - 2^{-r})^m = (1 - 2^{-r})^{2^r(m2^{-r})} \\approx e^{-m2^{-r}}$\n",
       "    * La expresi\u00f3n $(1 - 2^{-r})^{2^r}$ es de la forma $(1 - \\epsilon)^{1/\\epsilon} \\approx 1/e$   \n",
       "* Si $m$ es mucho menor que $2^r$ la probabilidad de __no__ encontrar una cola con al menos $r$ ceros se aproxima a 1\n",
-      "    * Ya que $m/2^r \\to 0$   \n",
+      "    * $m/2^r \\to 0$   \n",
       "* Si $m$ es mucho mayor que $2^r$ la probabilidad de __no__ encontrar una cola con al menos $r$ ceros se aproxima a 0\n",
-      "    * Ya que $m/2^r \\to\\infty$"
+      "    * $m/2^r \\to\\infty$"
      ]
     },
     {
@@ -339,9 +337,7 @@
       "\n",
       "El l\u00edmite es que tanta capacidad de procesamiento tenemos para calcular los hashes.\n",
       "\n",
-      "M\u00e1s informaci\u00f3n sobre el algoritmo de FM, est\u00e1 disponible en su paper: Probabilistic Counting Algorithms for Database Applications\n",
-      "\n",
-      "http://www.mathcs.emory.edu/~cheung/papers/StreamDB/Probab/1985-Flajolet-Probabilistic-counting.pdf"
+      "M\u00e1s informaci\u00f3n sobre el algoritmo de FM, est\u00e1 disponible en su paper: Probabilistic Counting Algorithms for Database Applications http://www.mathcs.emory.edu/~cheung/papers/StreamDB/Probab/1985-Flajolet-Probabilistic-counting.pdf"
      ]
     },
     {
@@ -452,7 +448,9 @@
       "\n",
       "HyperLogLog: the analysis of a near-optimal\n",
       "cardinality estimation algorithm\n",
-      "http://algo.inria.fr/flajolet/Publications/FlFuGaMe07.pdf"
+      "http://algo.inria.fr/flajolet/Publications/FlFuGaMe07.pdf\n",
+      "\n",
+      "HyperLogLog in Practice: Algorithmic Engineering of a State of The Art Cardinality Estimation Algorithm http://static.googleusercontent.com/media/research.google.com/en/us/pubs/archive/40671.pdf"
      ]
     },
     {
