--- a/Lecture_0_Introduction.ipynb
+++ b/Lecture_0_Introduction.ipynb
@@ -92,7 +92,7 @@
       "<tr><td>10</td><td>03/19</td><td>\n",
       "Din\u00e1mica en redes 3: Consenso y sincronizaci\u00f3n</td></tr>\n",
       "<tr><td>10</td><td>03/19</td><td>\n",
-      "Programaci\u00f3n funcional</td></tr>\n",
+      "[Programaci\u00f3n funcional](Lecture_7_Functional_Programming.ipynb)</td></tr>\n",
       "<tr><td>11</td><td>03/26</td><td>\n",
       "Comunidades 1: Clustering y Modularidad</td></tr>\n",
       "<tr><td>11</td><td>03/26</td><td>\n",
