--- a/Lecture_7_Functional_Programming.ipynb
+++ b/Lecture_7_Functional_Programming.ipynb
@@ -29,7 +29,7 @@
      "source": [
       "### Programaci\u00f3n Funcional\n",
       "\n",
-      "Es un paradigma de programaci\u00f3n donde los programas se ejecutan evaluando expresiones, en contraste con la programaci\u00f3n iterativa donde los programas se componen de sentencias que alteran el estado del sistema.\n",
+      "Es un paradigma de programaci\u00f3n donde los programas se ejecutan evaluando expresiones, en contraste con la programaci\u00f3n imperativa donde los programas se componen de sentencias que alteran el estado del sistema.\n",
       "\n",
       "Para ello es necesario que las funciones sean de primera-clase, es decir que sean tratadas como cualquier otro valor, puedan ser pasadas como argumentos a otras funciones y puedan ser regresadas como valores a otras funciones.\n",
       "\n",
@@ -81,7 +81,7 @@
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
@@ -95,12 +95,12 @@
      "collapsed": false,
      "input": [
       "from pyspark import SparkContext\n",
-      "sc = SparkContext(\"local\", \"Functional\", pyFiles=[])"
+      "sc = SparkContext(\"local[2]\", \"Functional\", pyFiles=[])"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -247,7 +247,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "En este ejemplo utilizamos dos funciones nuevas, la funci\u00f3n `flatMap` aplica la funci\u00f3n a cada uno de los elementos y despu\u00e9s aplana las iterables que resultan. `reduceByKey` agrega los resultados utilizando una funci\u00f3n asociativa sobre la llave."
+      "En este ejemplo utilizamos dos funciones nuevas, la funci\u00f3n `flatMap` aplica la funci\u00f3n a cada uno de los elementos y despu\u00e9s des-empaca las iterables que resultan. `reduceByKey` agrega los resultados utilizando una funci\u00f3n asociativa sobre la llave."
      ]
     },
     {
@@ -256,8 +256,11 @@
      "input": [
       "ds1 = sc.parallelize([(\"mexico\", 2), (\"australia\", 8), (\"alemania\", 9),\n",
       "                      (\"canada\", 1), (\"francia\", 8)])\n",
-      "ds2 = sc.parallelize([(\"mexico\", \"green\"), (\"australia\", \"blue\"), (\"alemania\", \"yellow\"),\n",
-      "                      (\"canada\", \"red\"), (\"francia\", \"white\")])\n",
+      "ds2 = sc.parallelize([(\"mexico\", \"green\"), \n",
+      "                      (\"australia\", \"blue\"), \n",
+      "                      (\"alemania\", \"yellow\"),\n",
+      "                      (\"canada\", \"red\"),\n",
+      "                     (\"canada\", \"blue\"), (\"francia\", \"white\")])\n",
       "\n",
       "dataset = ds1.join(ds2)\n",
       "print dataset.collect()"
@@ -269,11 +272,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "[('canada', (1, 'red')), ('francia', (8, 'white')), ('australia', (8, 'blue')), ('alemania', (9, 'yellow')), ('mexico', (2, 'green'))]\n"
+        "[('canada', (1, 'red')), ('canada', (1, 'blue')), ('alemania', (9, 'yellow')), ('francia', (8, 'white')), ('australia', (8, 'blue')), ('mexico', (2, 'green'))]\n"
        ]
       }
      ],
-     "prompt_number": 49
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -304,11 +307,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        " usuarios: 19999\n"
+        "usuarios: 19999\n"
        ]
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -328,7 +331,7 @@
        ]
       }
      ],
-     "prompt_number": 20
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -354,7 +357,7 @@
        ]
       }
      ],
-     "prompt_number": 21
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -395,7 +398,7 @@
        ]
       }
      ],
-     "prompt_number": 30
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -416,13 +419,13 @@
        ]
       }
      ],
-     "prompt_number": 38
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "early_locations = early_users.map(lambda item: item[8]).map(lambda item: (item, 1)).reduceByKey(add)\n",
+      "early_locations = early_users.map(lambda item: item[12]).map(lambda item: (item, 1)).reduceByKey(add)\n",
       "top_early_locations = early_locations.map(lambda item: (item[1], item[0])).sortByKey(ascending=False)\n",
       "print top_early_locations.take(5)"
      ],
@@ -433,11 +436,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "[(111, u'Pacific Time (US & Canada)'), (35, u'Eastern Time (US & Canada)'), (11, u'Central Time (US & Canada)'), (8, u'Hawaii'), (7, u'London')]\n"
+        "[(18, u'San Francisco'), (17, u''), (16, u'San Francisco, CA'), (6, u'Brooklyn, NY'), (5, u'NYC')]\n"
        ]
       }
      ],
-     "prompt_number": 41
+     "prompt_number": 18
     },
     {
      "cell_type": "markdown",
@@ -445,6 +448,92 @@
      "source": [
       "Finalmente como un ejercicio de clase vamos a obtener cuales son los elementos comunes en las descripciones de los usuarios."
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "descriptions = data.map(lambda item: item[11])\n",
+      "tokens = descriptions.map(lambda desc: desc.lower())\\\n",
+      "    .flatMap(lambda desc: desc.split()) \n",
+      "token_count = tokens.map(lambda token: (token, 1))\\\n",
+      "    .reduceByKey(add)\n",
+      "freq = token_count.map(lambda _: _[1])\n",
+      "total_tokens = freq.fold(0, add)\n",
+      "\n",
+      "print total_tokens"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "121402\n"
+       ]
+      }
+     ],
+     "prompt_number": 37
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%pylab inline"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Populating the interactive namespace from numpy and matplotlib\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "WARNING: pylab import has clobbered these variables: ['add']\n",
+        "`%pylab --no-import-all` prevents importing * from pylab and numpy\n"
+       ]
+      }
+     ],
+     "prompt_number": 38
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "fr = sorted(freq.collect(),reverse=True)\n",
+      "plt = plot(fr)\n",
+      "yscale('log')\n",
+      "xscale('log')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "png": "iVBORw0KGgoAAAANSUhEUgAAAX0AAAEHCAYAAABCwJb2AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHNpJREFUeJzt3Xt0lNW5x/FvQrgJFkRDlCQaJSEhkLqqBC0aEo4XRBDU\nChm8QEEEoZFDTz3ipZrEhVawrnOscERFkAIGpAUDBEMJ7WBaWrCyqFhEiE1qSmlBbESCBJLM+WMX\nwiUkM5nLnsvvs9as8r4zed/H3axndp69372jXC6XCxERiQjRtgMQEZHAUdIXEYkgSvoiIhFESV9E\nJIIo6YuIRBAlfRGRCKKkLyISQZT0RUQiiF+Sfm1tLZmZmZSUlPjj8iIi0kZ+Sfpz5swhNzfXH5cW\nEREvuJX0J06cSFxcHBkZGWecLy0tJS0tjZSUFGbPng3Axo0bSU9PJzY21vfRioiIV6LcWXunvLyc\nrl27Mm7cOHbu3AlAQ0MDqamplJWVER8fT2ZmJkVFRSxbtoza2lp27dpF586dWb16NVFRUX7/DxER\nkdbFuPOhrKwsqqqqzji3bds2kpOTSUpKAsDhcFBcXMysWbMAWLx4MbGxsUr4IiJBxK2k35x9+/aR\nmJh46jghIYGtW7eeOh4/fnyLP5+cnMxnn33W1tuLiESk3r17U1FR0eafb/NArrc9+M8++wyXy+Wz\nV35+vk8/39L7zb3X2rmz32/pvXBrC0+O1RZqC7VFy8fedpbbFRQUFLjzwZqaGoqKipg2bRoAhw8f\nZs2aNdx///0AlJSU0K1bN2688Ua3blxYWHjq3ydLRN7y9Dqtfb6l95t7r7VzZ79/8tjpdJKTk9Ni\nLJ4KtrZw91htobZo7lhtAVVVVbz11lts3rwZN9N281xuqqysdPXv3//U8YkTJ1xXXXWVq7Ky0lVX\nV+e6+uqrXbt27XL3ci4Pbh328vPzbYcQNNQWTdQWTdQWTbzNnW6Vd8aOHcugQYPYs2cPiYmJLFq0\niJiYGObOncvQoUNJT08nNzeXvn37tv3bJ4L5ugcTytQWTdQWTdQWvuPWlE2/3Dgqivz8fHJycvR/\nqIhIK5xOJ06nk8LCQrxJ21aTvqVbi4iELG9zpxZcExGJIFaTfkFBAU6n02YIIiIhwel0ejdr599U\n3hERCSEq74iIiNuU9EVEIohq+iIiIUA1fRGRCKSavoiIuE1JX0Qkgijpi4hEEA3kioiEAA3kiohE\nIA3kioiI25T0RUQiiJK+iEgE0UCuiEgI0ECuiEgE0kCuiIi4zWrSHzgQXn4Z/vlPm1GIiEQOq0l/\n1iz48ENIS4PbboMlS+DIEZsRiYiEt6Co6R89CmvWwNKl8Nvfwu23w/33wy23QPv2NqITEQlO3tb0\ngyLpn+7gQXjnHVi2DCoqIDcX7rsPrrsOoqIsBCoiEkRCeiC3uSmbsbHwgx/Ali3w+99Dz54wfjyk\npEB+PuzZYydWERGbImrKpstlav/LlkFREVx+uSn/5OZCXJyfAxURCSJhV95pTX09/PrXpv6/Zg1c\nf735ArjzTuja1Q+BiogEkYhL+qerrTWJf9kyUwr6/vchLw+uvNI3MYqIBJuQrul7q0sXGDsW1q2D\n7dshOhoyM+Huu+H9901ZSEREmoR0T785R47Az38OP/sZdO4MM2aAwwEdO/r8ViIiARfR5Z2WNDbC\nhg3mid8dO+Dhh83r0kv9dksREb+L6PJOS6KjYdgwKC2F3/zGLPXQt6+Z/rl9u+3oRETsCNuefnO+\n/BLeeAPmzTOln+xsGDzYvC6/PKChiIi0ico7bdDQADt3msHek68LLmj6AsjKgj599ASwiASfkE76\n+fn55OTkkJOTYyOEU1wu+PRTk/zLy2HzZqira/oSGDwYMjJMyUhExAan04nT6aSwsDB0k34wb6Ly\n17+e+ZfAgQNw443mr4BLL4UOHcyrfXvzvwMGwMUX245aRMJdSPf0gznpn+0f/zB/Bfzud2Zs4Phx\n8zpxwhw3Npr39NeAiPiTkn4QaGyE734Xpk41TwWLiPiLkn6Q+OADGDkSdu+Gbt1sRyMi4UpJP4g8\n9JBZ9O1//sd2JCISrpT0g8jBg9Cvn1kFtH9/29GISDjSE7lBJDYWnnkGpk/XYm8iEpyU9H3s4Yfh\n0CFYudJ2JCIi54qxHUC4iYmBuXPNyp6dOsGIEZrGKSLBQzV9P1m9Gp57ziz1/KMfwQMPmC8BERFv\naCA3iLlcZkmHF1+EbdvMqp8jRsCtt0L37rajE5FQFHQDubt372bq1KmMGTOGN99809eXDylRUZCT\nAyUl8Mc/mv18Fy82K3r+5Ce2oxORSOS3nn5jYyMOh4N33nmn+RtHQE//fPbvh5tvNts6PvusVvMU\nEfcFpKc/ceJE4uLiyMjIOON8aWkpaWlppKSkMHv27FPn165dy/Dhw3E4HG0OLJxddhk4nbB2Lfz3\nf2t6p4gEjls9/fLycrp27cq4cePYuXMnAA0NDaSmplJWVkZ8fDyZmZkUFRXRt2/fUz83atQoiouL\nm79xBPf0T/rXv+C228yOXvPna6BXRFrnbe50a8pmVlYWVVVVZ5zbtm0bycnJJCUlAeBwOCguLubA\ngQOsWrWKY8eOMWTIkDYHFgkuusg8vTthgqn9r15t/goQEfGXNs/T37dvH4mJiaeOExIS2Lp1K9nZ\n2WRnZ7t1jYKCglP/DobNVGzo0gVWrIDnn4fMTHjtNRg+3HZUIhIsTm6e4ittTvpRPhh9PD3pR7Ko\nKHjqKbjuOpg2zezj+/LLcMUVtiMTEdvO7hAXFhZ6db02T9mMj4+nurr61HF1dTUJCQkeXaOgoMCn\n32Ch7uabzd69qakwfrztaEQkmDidTp90lN2esllVVcUdd9xxaiC3vr6e1NRUNm3aRK9evRg4cOA5\nA7kt3lgDuef19demtn/oEHTsaDsaEQkmAZmyOXbsWAYNGsSePXtITExk0aJFxMTEMHfuXIYOHUp6\nejq5ubluJ3xp2YUXQlqa2ZhFRMSXrC7DkJ+fH7EDuK354Q+hZ0944gnbkYhIMDg5oFtYWKi1d8LR\nqlWwYAGsX287EhEJJlpwLUwdOAB9+pi6frt2tqMRkWARdAuueUKzd86vZ0+49FIzm0dEJOCzd3xN\nPf3WPfQQfPvb8MgjtiMRkWAR0j19aVlWFpSX245CRMKJkn4QO5n0GxttRyIi4UI1/SCWlATJyWbn\nLRGJbKrpR4jqarMQ2zvvwODBtqMREdtU0w9ziYmwaBHcey8sXw41NbYjEpFQpqQfAoYNg//9X1i6\n1Ky8qYqYiLSVavoh4p57YN06s7H61Klw/LjtiEQkkFTTj1AuF4wYYer7M2fajkZEAk3LMESgv/wF\nBg6EkhKz8YqIRA4N5Eagq64yZZ477oD33oODBzWXX0Tco55+CNu40SzRcPAgNDSYh7mWLIHu3W1H\nJiL+ovKOAGZVzpkzISbG7LErIuEppMs7mr3jOz17ms3UN2yAV1+FigrbEYmIL2n2jjSrvBxeegne\nfx/KyuCaa2xHJCK+pPKONOutt2DePPjDH7QJi0g4CenyjvjP+PHQpQu8/rrtSEQkmKinH8b+9CcY\nOhR279aMHpFwofKOtGjSJPj8c3jgAbjwQrj+erMNo4iEJiV9adGRI6a+/9vfwtdfw5YtcN99cPfd\npvzzne9Ahw62oxQRd4V00s/PzycnJ4ecnBwbIUSkf/0Lnn4adu2Cf/wDEhJg9WrzBSAiwcvpdOJ0\nOiksLAzdpK+evl319fDww/DLX0J8PMyYAQ8+CFFRtiMTkfMJ6Z6+kn5wOHgQ9uyBadMgLc3M+OnW\nzXZUItIcTdkUr8XGwg03mDn9F19s/l1XZzsqEfEH9fTlHCNHQr9+8PzzKvWIBBuVd8Tn9u2D4cNN\n4n/xRejVy3ZEInKSyjvic/HxZmrnxRdD//4wahRs3ao1+0XCgXr60qJvvjGrdr7xhlmzf8kS7dYl\nYpPKOxIwq1fD5MkwfbqZ6y8igaekLwH1t7+Zkk9FBVxyie1oRCJPSNf0tYlK6ElIMHvzPvec+QIQ\nkcDQJipizYED4HDARx/B4MHwwx+ahdzat7cdmUj4U3lHrDlyBBYsgLlz4dgxs4a/w2HKP5rfL+If\nSvoSFD7+2CzfsGYNpKfDihVmKWcR8a2QrulL+OjfH372MzPAe/nlpvb/85/bjkpEzqaevvjFn/9s\n6v1DhsDKlSr3iPiKevoSlPr1Mzt2bd8Ov/+97WhE5CQlffGbLl3gRz8yq3aq1CMSHFTeEb/78EPI\nyoL8fHj0UWjXznZEIqFL5R0JetdeCxs2mNe110JJie2IRCKXevoSMC4XrF0LU6dC9+5w5ZVmxs9V\nV9mOTCR0aJ6+hJzjx03J5913zZfAwoXmiV4RaV1QJv3i4mJKSko4fPgwDz74ILfccsu5N1bSj3gu\nl3mIa9o0M9Cbna0HukRaE5RJ/6SamhoeffRRFixYcO6NlfTl35YvhxdegOpqWLwYhg7VOj4i5xOw\ngdyJEycSFxdHRkbGGedLS0tJS0sjJSWF2bNnn/HerFmzyMvLa3NwEhkcDtixA+bNg8cfh6QkOHzY\ndlQi4cntnn55eTldu3Zl3Lhx7Ny5E4CGhgZSU1MpKysjPj6ezMxMioqKSEtL4/HHH+fWW2/lpptu\nav7G6unLedx/P9TUmCmemZm2oxEJLt7mzhh3P5iVlUVVVdUZ57Zt20ZycjJJSUkAOBwOiouLKSsr\nY9OmTRw+fJiKigqmTJnS7DVPXxs6JyeHnJwcT+OXMDR3rtmZa/hwmDABnnnGPOglEomcTqdP9x3x\nqKZfVVXFHXfccaqn/4tf/IINGzbwxhtvALB06VK2bt3KK6+80vqN1dOXVnz6qVmr/6OP4MknzVaN\nMW53U0TCk9WHs6K0ipb4UWqqeZDr5ZfhtddgzBioq7MdlUho8yrpx8fHU11dfeq4urqahIQEt39e\n2yVKa6Ki4Hvfg/JyOHrU1PtPnLAdlUjgWdku8ezyTn19PampqWzatIlevXoxcOBAioqK6Nu3b+s3\nVnlHPHTkCFxzDdxyi5npIxKJAlbeGTt2LIMGDWLPnj0kJiayaNEiYmJimDt3LkOHDiU9PZ3c3Fy3\nEr5IW3TtCr/7ndmd67HHzMNdIuIZq8sw5Ofna9aOeOzTT2HkSLN+z9NPw4gRtiMS8b+Ts3gKCwuD\n94ncFm+s8o544ZtvzGJtc+ZAfLz5t/oOEgm0tLJEpM6dYeZM0+u/+Wb4j//QDl0i7rA667mgoEDl\nHfHKJZfAT38K3/oW3Hij2Zs3Lc12VCK+56uHtFTekbDQ0ABTpsCbb5pST16eNmOX8BTUq2y2eGMl\nffGD9evhnnvg29+GoiKzUYtIOFFNX+Q0t98Of/ubeYBr2DCzXr+INLGa9PVErvhDjx5QVgaTJpll\nm7Oy4MAB21GJeMfKE7m+pPKOBEJNDdx5J2zZAqWlZpaPSChTeUekBd27w29+Y57gvekms3bPF1/Y\njkrEHvX0JWKUl8N995lSz4EDZpqnSKgJ6Z6+avoSSFlZsHcv9OoF3brBiy+aqZ4ioUA1fZE2OnrU\nrM//4otQXw8vvQQPPGA7KhH3aJ6+SBsdPWrm8k+aBNOmmeTfqZPtqERapqQv4qUdO8wMnwsvhA8+\nUOKX4KakL+ID33wDAwZAYiK8956WcJDgFdIDuSLBonNns0HLRx/Btdeah7tEwpFm74j8W/fuUFUF\nt90GQ4fC2rW2IxJpotk7In7005/Ck0/Cf/2XmdufkWE7IhFDNX0RP/nVr8wyzeXl8Pe/Q5cutiMS\nUdIX8asTJ8zgblycGeDt1ct2RBLpNJAr4kft25stGTt1Mhuw/+EPtiMS8Y6SvkgrunUzm7NkZMBd\nd8H3v287IpG2U3lHxE11dfDHP5q9eCdMgDfegHbtbEclkcbb3KmN0UXc1LEj3HCDKfFcfz0kJcGP\nfwzR+ntZAkAbo4tY9MtfwuTJ5pWZCXffbTsiiRQayBWx4Hvfg3nz4PBh8+/33rMdkYh71NMX8dLk\nybBuHUyZAs88o3V7xL9CuqYvEg5efhn694enn4b9+03y/853bEcl0jz19EV8pLgYFi+Gjz82G7Ff\ncontiCQc6YlckSBSXQ0DB5pF2/LyzIqdIr6kgVyRIJKYCMuWwaFD8Oij8Oc/245I5Ezq6Yv4QWUl\nPPQQ1NbC8uVwxRW2I5JwEdI9fa2nL+Hqyith6VL4+mvo0wc+/9x2RBLqtJ6+SIi46SazD+8zz8B/\n/qftaCTUacqmSJBbtw4WLID/+z+zVk9enu2IJJIp6Yv4WefOZveto0fh+efhuuvg6quhQwfbkUkk\n0uwdkQDo0QNmzIC0NBg2zMzpF7FBNX2RAJs+3WzFeMUVsHAhxMfbjkhCSUjP3hGJRD/+sVms7csv\noaQEKipsRySRRD19EUt+8hN4+22zHeO+fRAbazsiCQVahkEkxPXvD9nZJulPmQKXXWY7IglmKu+I\nhLhnn4WePeHdd+HXv7YdjYQ79fRFgsT06SbpX3EF5ObCuHG2I5JgpPKOSJjYvx+2b4fycqiqMmv2\niJwt6JJ+ZWUlzz33HF999RUrV648/42V9EWa9atfmZ5+errp9b/9tu2IJJgEXdI/afTo0Ur6Im1Q\nXw8ffAAnTph1e44f1xaM0iQgA7kTJ04kLi6OjIyMM86XlpaSlpZGSkoKs2fPbnMQItIkJga++10Y\nPBg6doTRo8HhgL17bUcm4cCtpD9hwgRKS0vPONfQ0EBeXh6lpaXs2rWLoqIiPvnkE78EKRKp1q41\nSb+6Gj780HY0Eg7cSvpZWVlcdNFFZ5zbtm0bycnJJCUl0b59exwOB8XFxXz55Zc8/PDD7NixQ71/\nES8NGWLq+/36waZNpr6vaZ3ijTavsrlv3z4SExNPHSckJLB161Z69OjB/Pnz3brG6RsC5OTkkJOT\n09ZwRMLayJEm4b/7LmzYAF99ZTsiCRSn0+nTzabanPSjfDCy5ItdYEQiwYgR5lVfb+r8LpcGdyPF\n2R3iwsJCr67X5qQfHx9PdXX1qePq6moSEhK8CkZEWhYTA506wYABJul37GgWbeve3XZkEiranPQH\nDBjA3r17qaqqolevXqxYsYKioiKPrlFQUKCyjoiHduxoKu+MHm0e6lLSD3++KvO4NU9/7NixbN68\nmUOHDtGzZ0+effZZJkyYwHvvvceMGTNoaGjgwQcf5IknnnD/xpqnL+K1a6+F114zPX+JDEH7cFar\nN1bSF/HasGHw/vum7ANwww2wfr3dmMS/QnpjdJV3RLyzZo3ZexfgL38x5R4JTwEt7/iDevoivvX3\nv5tyz/79tiMRfwrpnr6I+E6XLvDFFzB8eNO5fv1gzhx7MUnwUXlHJEx06wZlZXDkiDn+4guzH6+S\nfnhQeUdEWnTwIPTta5K/hA9tlygizerUCY4dsx2FBBvV9EXCVOfOEB1tnto93be+Bfv2QYcOduIS\nu1TTFwlTMTHw5ZfQ0HDm+Z49zTRPJf3Qopq+iLRJz56wcyfExdmORNpCNX0R8UjHjlBXZzsKsUU9\nfZEIk5wM2dnnLtKWlgYPPWQnJnFfSPf0CwoKfLo5gIi07qWXID0devVqenXoANroLrg5nU6f7EGi\nnr6I8Ne/QlYWfP657UikNSHd0xeR4NChA5w4YTsKCQQlfRGhfXs4ftx2FBIIejhLRGjf3jy9u3dv\n8+9ffvm5D3lJaNLDWSLCBReY2Tu3337ue4cOwcyZ5iX26OEsEQmIkxNGfDBxRHxAA7ki4lcxMRrk\nDSdK+iLSopgYqK+3HYX4ipK+iLSofXsl/XCipC8iLVJPP7xoyqaItCgmBv75T/j445Y/l5Bw7no+\nEnw0ZVNEWpSaCq++Cg7H+T9TUwO33AKLFgUurkijKZsiEjSKiqC4GJYvtx1J+NOUTRGxrl27c3fo\nkuCkpC8iXlPSDx1K+iLiNSX90KGkLyJeU9IPHUr6IuK16Ggl/VChpC8iXlNPP3Qo6YuI15T0Q4ee\nyBURr7VrB/v3m/n6nurQAe6801xD/E9P5IqI19LS4JprYM0az3923TrYvh1SUnwfVzjRE7kiEhZS\nU82XRWqq7UhCg57IFZGQFh0NjY22o4gcSvoiYlVUFOiP/sBR0hcRq9TTDywlfRGxSkk/sJT0RcSq\nqCgl/UBS0hcRq6KjVdMPJCV9EbFK5Z3AUtIXEauU9ANLSV9ErNKUzcBS0hcRq9TTDyyfr71TW1vL\ntGnT6NixIzk5Odx7772+voWIhBEl/cDyeU9/1apVjBkzhtdff501bVl9KQL5YhGlcKG2aBIpbeHO\nlM1IaYtAcCvpT5w4kbi4ODIyMs44X1paSlpaGikpKcyePRuAffv2kZiYCEA7rZXqFv1CN1FbNImU\ntnBnymaktEUguJX0J0yYQGlp6RnnGhoayMvLo7S0lF27dlFUVMQnn3xCQkIC1dXVADQG8G82T38p\nWvt8S+83915r585+35+/xMHWFp4e+5Laou3XDlRbnCzvqC3cP/aGWzX9rKwsqqqqzji3bds2kpOT\nSUpKAsDhcFBcXMz06dPJy8ujpKSEkSNH+izQ1jidTo/W5W/t8y2939x7rZ07+31P4/VEsLWFp8e+\npLZoOT5vPu+rtoiOhnnzoLrayaBBTe9v2dJ0vGULfP2126G36vRru6OmJox+L1xuqqysdPXv3//U\n8cqVK12TJk06dbxkyRJXXl6eu5dz9e7d2wXopZdeeunlwat3795u59nmtHn2TlRUVFt/FICKigqv\nfl5ERDzX5tk78fHxp2r3ANXV1SQkJPgkKBER8Y82J/0BAwawd+9eqqqqOH78OCtWrAhoDV9ERDzn\nVtIfO3YsgwYNYs+ePSQmJrJo0SJiYmKYO3cuQ4cOJT09ndzcXPr27evveEVExAvWNkYXEZHA09o7\nIiIRJGiSfm1tLePHj2fy5Mm8/fbbtsOxqrKykkmTJjF69GjboVhXXFzM5MmTcTgcbNy40XY41uze\nvZupU6cyZswY3nzzTdvhWFdbW0tmZiYlJSW2Q7HK6XSSlZXF1KlT2bx5s1s/EzRJX2v2NLnyyitZ\nsGCB7TCCwqhRo3j99deZP38+K1assB2ONWlpabz66qssX76cDRs22A7Hujlz5pCbm2s7DOuio6O5\n8MILqaurc3v2pF+TvtbsaeJJW4S7trTFrFmzyMvLC2SYfudpO6xdu5bhw4fjcDgCHarfedIWGzdu\nJD09ndjYWBuh+p0nbZGVlcX69et54YUXyM/Pd+8GXj3a1Yr333/ftX379jOe5K2vr3f17t3bVVlZ\n6Tp+/Ljr6quvdu3atcu1ZMkS17p161wul8vlcDj8GZYVnrTFSffcc4+NUP3Ok7ZobGx0PfbYY66y\nsjKLEftHW34nXC6Xa+TIkYEO1e88aYunnnrKNWPGDNett97qGjVqlKuxsdFi5L7Xlt+Luro6t/OF\nz9fTP10orNkTKJ60RVxcHE8++SQ7duxg9uzZzJw5M/AB+5EnbVFWVsamTZs4fPgwFRUVTJkyJfAB\n+4kn7XDgwAFWrVrFsWPHGDJkSOCD9TNP2mLWrFkALF68mNjYWK9XBwg2nrTF7t272bBhAzU1NTzy\nyCNuXd+vSb85p5dxABISEti6dSsXXHABCxcuDHQ4Vp2vLXr06MH8+fMtRhZ452uLV155xe1f5nBw\nvnbIzs4mOzvbYmSBd762OGn8+PE2wrLifG3x+OOPc9ddd3l0rYAP5Ibbt7I31BZN1BaG2qGJ2qKJ\nL9si4Elfa/Y0UVs0UVsYaocmaosmvmyLgCd9rdnTRG3RRG1hqB2aqC2a+LQtfD70fBqHw+G67LLL\nXB06dHAlJCS4Fi5c6HK5XK7169e7+vTp4+rdu7fr+eef92cIQUNt0URtYagdmqgtmvi7LbT2johI\nBAmaJ3JFRMT/lPRFRCKIkr6ISARR0hcRiSBK+iIiEURJX0Qkgijpi4hEECV9EZEI8v8J6I/oaSrW\nrwAAAABJRU5ErkJggg==\n",
+       "text": [
+        "<matplotlib.figure.Figure at 0x106b18410>"
+       ]
+      }
+     ],
+     "prompt_number": 47
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 40
     },
     {
      "cell_type": "code",
