--- a/Lecture_0_Introduction.ipynb
+++ b/Lecture_0_Introduction.ipynb
@@ -112,7 +112,7 @@
       "<tr><td>14</td><td>04/23</td><td>\n",
       "Comunidades 3: Map y comunidades con traslape</td></tr>\n",
       "<tr><td>14</td><td>04/23</td><td>\n",
-      "\u00cdndices invertidos</td></tr>\n",
+      "Miner\u00eda de textos / \u00edndices invertidos</td></tr>\n",
       "<tr><td>15</td><td>04/30</td><td>\n",
       "Redes con signos y balance estructural</td></tr>\n",
       "<tr><td>15</td><td>04/30</td><td>\n",
