--- a/Lecture_7_Functional_Programming.ipynb
+++ b/Lecture_7_Functional_Programming.ipynb
@@ -289,7 +289,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "### Ejemplo"
+      "### Ejemplo\n",
+      "\n",
+      "A continuaci\u00f3n hacemos un an\u00e1lisis sobre las caracter\u00edsticas de una muestra de los usuarios de Twitter"
      ]
     },
     {
@@ -527,13 +529,11 @@
      "prompt_number": 47
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 40
+     "source": [
+      "Podemos observar que la distribuci\u00f3n del lenguaje en las descripciones sigue una ley de Zipf, es decir hay un gran n\u00famero de palabras que se utilizan muy poco, al mismo tiempo que hay un n\u00famero peque\u00f1o de palabras que se utilizan de manera muy frecuente."
+     ]
     },
     {
      "cell_type": "code",
