--- a/Lecture_0_Introduction.ipynb
+++ b/Lecture_0_Introduction.ipynb
@@ -90,26 +90,24 @@
       "<tr><td>09</td><td>03/12</td><td>\n",
       "[Procesamiento de flujos: conteo](Lecture_6_Stream_Algorithms_Counting.ipynb)</td></tr>\n",
       "<tr><td>10</td><td>03/19</td><td>\n",
-      "Din\u00e1mica en redes 3: Consenso y sincronizaci\u00f3n</td></tr>\n",
-      "<tr><td>10</td><td>03/19</td><td>\n",
       "[Programaci\u00f3n funcional](Lecture_7_Functional_Programming.ipynb)</td></tr>\n",
       "<tr><td>11</td><td>03/26</td><td>\n",
-      "Comunidades 1: Clustering y Modularidad</td></tr>\n",
-      "<tr><td>11</td><td>03/26</td><td>\n",
-      "Estructuras algebr\u00e1icas para procesamiento de informaci\u00f3n</td></tr>\n",
+      "Din\u00e1mica en redes 3: Consenso</td></tr>\n",
       "<tr><td>12</td><td>04/02</td><td>\n",
       "<b>Presentaciones: Avances</b></td></tr>\n",
       "<tr><td>12</td><td>04/02</td><td>\n",
       "<b>Presentaciones: Avances</b></td></tr>\n",
       "<tr><td>13</td><td>04/09</td><td>\n",
-      "Comunidades 2: Stability</td></tr>\n",
+      "Comunidades 1: Clustering y Modularidad\n",
+      "</td></tr>\n",
       "<tr><td>13</td><td>04/09</td><td>\n",
-      "Miner\u00eda de textos</td></tr>\n",
+      "[Estructuras algebr\u00e1icas para procesamiento de informaci\u00f3n](Lecture_8_Abstract_Algebra.ipynb)</td></tr>\n",
       "<tr><td>      </td><td>04/16</td><td>\n",
       "DESCANSO</td></tr>\n",
       "<tr><td>      </td><td>04/16</td><td>\n",
       "DESCANSO</td></tr>\n",
       "<tr><td>14</td><td>04/23</td><td>\n",
+      "Comunidades 2: Stability\n",
       "Comunidades 3: Map y comunidades con traslape</td></tr>\n",
       "<tr><td>14</td><td>04/23</td><td>\n",
       "Miner\u00eda de textos / \u00edndices invertidos</td></tr>\n",
