--- a/Lecture_8_Abstract_Algebra.ipynb
+++ b/Lecture_8_Abstract_Algebra.ipynb
@@ -47,8 +47,8 @@
      "collapsed": false,
      "input": [
       "val a = List(1,2,3,4,5,6)\n",
-      "println(a.reduce(_ + _))\n",
-      "println(a.reduce(_ * _))\n",
+      "println(a.reduceLeft(_ + _))\n",
+      "println(a.reduceRight(_ * _))\n",
       "println(a.reduce((a,b) => if (a > b) a else b))\n",
       "println(a.reduce((a,b) => if (a < b) a else b))"
      ],
@@ -71,7 +71,7 @@
        "text": []
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 68
     },
     {
      "cell_type": "markdown",
@@ -233,15 +233,33 @@
       "* si el conjunto de datos es un semigrupo bajo cierta operaci\u00f3n, podemos confiar que un sistema distribuido que aplique estas operaciones correctamente sin tener que preocuparse de que operaci\u00f3n se est\u00e1 realizando\n",
       "* si el conjunto de datos es un monoide bajo cierta operaci\u00f3n podemos scar ventajas de matrices ralas, ya que la propiedad de identidad nos permite operar sobre los elementos no especificados\n",
       "\n",
-      "### Grupos y Anillos\n",
+      "#### Grupos y Anillos\n",
       "\n",
       "Un grupo es es un monoide que adicionalmente satisface la propiedad de inversa\n",
       " \n",
-      "* $\\exists \\; y \\in G$ tal que $\\forall \\; x \\in M$, $x \\circ y = y \\circ x$ (inverso)\n",
+      "* $\\exists \\; y \\in G$ tal que $\\forall \\; x \\in M$, $x \\circ y = y \\circ x= e$ (inverso)\n",
       "\n",
-      "Y un grupo abeliano satisface adem\u00e1s la propiedad de conmutatividad\n",
+      "Un grupo abeliano satisface adem\u00e1s la propiedad de conmutatividad\n",
+      "\n",
+      "Un anillo es un grupo abeliano sobre la suma que adem\u00e1s:\n",
+      "\n",
+      "* Tiene cerradura en la multiplicaci\u00f3n\n",
+      "* Es asociativa en la multiplicaci\u00f3n\n",
+      "* Satisface la propiedad distributiva de la suma sobre la multiplicaci\u00f3n\n",
+      "\n",
+      "T\u00edpicamente se utilizan  anillos en computo distribuido es para resolver problemas matriciales, con objetos que no son n\u00fam\u00e9ricos.\n",
+      "\n",
+      "Un ejemplo de es el uso de un anillo para resolver el problema de caminos m\u00e1s cortos sobre un grafo.\n",
+      "\n",
       "\n",
       "\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### Procesamiento de datos"
      ]
     },
     {
@@ -857,6 +875,8 @@
      "metadata": {},
      "source": [
       "### Count-Min-Sketch\n",
+      "\n",
+      "Es un m\u00e9todo que tiene similitud con los filtrros de bloom donde definimos con que probabilidad el conteo de un elemento es correcto es $p >= 1 - \\text{delta}$.\n",
       "\n"
      ]
     },
@@ -864,7 +884,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "val delta= 1E-10\n",
+      "val delta= 1E-5\n",
       "val eps = 0.001\n",
       "val seed = 1\n",
       "\n",
@@ -896,7 +916,7 @@
        "text": []
       }
      ],
-     "prompt_number": 61
+     "prompt_number": 66
     },
     {
      "cell_type": "markdown",
