Added inverted index

--- a/Lecture_0_Introduction.ipynb
+++ b/Lecture_0_Introduction.ipynb
@@ -108,17 +108,18 @@
       "DESCANSO</td></tr>\n",
       "<tr><td>14</td><td>04/23</td><td>\n",
       "Comunidades 2: Stability\n",
-      "Comunidades 3: Map y comunidades con traslape</td></tr>\n",
+      "</td></tr>\n",
       "<tr><td>14</td><td>04/23</td><td>\n",
       "Miner\u00eda de textos / \u00edndices invertidos</td></tr>\n",
       "<tr><td>15</td><td>04/30</td><td>\n",
+      "Comunidades 3: Map y comunidades con traslape\n",
       "Redes con signos y balance estructural</td></tr>\n",
       "<tr><td>15</td><td>04/30</td><td>\n",
       "Modelos de lenguaje: introducci\u00f3n</td></tr>\n",
       "<tr><td>16</td><td>05/07</td><td>\n",
       "Inferencia de redes</td></tr>\n",
       "<tr><td>16</td><td>05/07</td><td>\n",
-      "Modelos ocultos de Markov</td></tr>\n",
+      "Topic Models</td></tr>\n",
       "<tr><td>17</td><td>05/14</td><td>\n",
       "Privacidad y privacidad en redes</td></tr>\n",
       "<tr><td>17</td><td>05/14</td><td>\n",
